# telegram-notebooklm-mvp

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
scripts/: create_telegram_session.py
src/telegram_notebook/: __init__.py  bot.py  bot_api.py  chunking.py  config.py  db.py  embeddings.py  main.py  media.py  model_catalog.py  models.py  pipeline.py  provider_http.py  search.py  telegram_client.py  transcription.py
