[project]
name = "telegram-notebooklm-mvp"
version = "0.1.0"
description = "Ingest public Telegram channels, transcribe media, and search transcripts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-genai==1.66.0",
  "openai>=1.75.0",
  "python-dotenv>=1.0.1",
  "telethon>=1.39.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_notebook"]
